# mini-macro-keyboard

./: .git-commit-temlate  .gitmodules  .mxproject  README.md
Core/Inc/: stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_it.c
USB_DEVICE/App/: usb_device.c  usbd_custom_hid_if.c
hw/mini-macro-keyboard/: mini-macro-keyboard-cache.lib  mini-macro-keyboard.lib  mini-macro-keyboard.sch  sym-lib-table
hw/mini-macro-keyboard-eco/: mini-macro-keyboard-eco-cache.lib  mini-macro-keyboard-eco-rescue.lib  mini-macro-keyboard-eco.kicad_pcb  mini-macro-keyboard-eco.pro  mini-macro-keyboard-eco.sch  sym-lib-table
sw-mcu/: .cproject  .mxproject  .project  mini-macro-keyboard Debug.launch  mini-macro-keyboard Release.launch  mini-macro-keyboard.ioc
sw-mcu/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
sw-mcu/Core/Inc/drv/: drv_key.h  drv_switch.h
sw-mcu/Core/Inc/event/: e_signals.h  e_timer.h
sw-mcu/Core/Src/: main.c  stm32f1xx_it.c
sw-mcu/Core/Src/drv/: drv_key.c  drv_switch.c
sw-mcu/USB_DEVICE/App/: usb_device.c  usbd_custom_hid_if.c  usbd_desc.c
sw-mcu/mini-macro-keyboard/: .cproject  .mxproject  .project  mini-macro-keyboard.ioc
sw-mcu/mini-macro-keyboard-eco/: .cproject  .mxproject  .project  mini-macro-keyboard-eco-Debug.launch  mini-macro-keyboard-eco-Release.launch  mini-macro-keyboard-eco.ioc
sw-pc/: Keyboard_App.sln
sw-pc/Debug/: Keyboard_App.ilk
sw-pc/Keyboard_App/: Keyboard_App.vcxproj  Main.cpp
sw-pc/Keyboard_App/Debug/: vc141.idb
sw-pc/hid-sniffer/: CMakeLists.txt  README.md
sw-pc/hid-sniffer/src/: main.c
(+71 files in other folders)
